# mini-coil-demo

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
frontend/: .prettierignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  queries.js
frontend/src/common/: axios.js  colors.js
frontend/src/components/: ExampleSelector.jsx  SentenceInput.jsx  SentencesView.jsx  Visualization.jsx  VisualizationGraph.jsx
minicoil_demo/: config.py  service.py
minicoil_demo/evaluation/: evaluate.py  evaluate_bm25.py
minicoil_demo/model/: encoder.py  mini_coil.py  sparse_vector.py  vocab_resolver.py
minicoil_demo/tools/: common.py  download_beir_dataset.py  encode_to_qdrant.py  encode_to_qdrant_bm25.py  search.py
